{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 40,
  "lineage": "d06c9715-f9e9-2acc-da89-10aa2b1a8856",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:subnet/subnet-0e993133b1664b1cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.222.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e993133b1664b1cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755233231675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "apne2-fastcampus-public-001/az1",
              "Owner": "seank03",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "apne2-fastcampus-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-051effa40fb6d871d"
          }
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate to the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-955425332",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d7aafe9d9dde703e",
            "self": false,
            "source_security_group_id": "sg-0c14850aad67b7885",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "pod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate to the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-506981552",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d7aafe9d9dde703e",
            "self": false,
            "source_security_group_id": "sg-00c6d5b25a476be67",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__control_plane",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:security-group/sg-0cbe9bc56ed543566",
            "description": "Security Group for EKS Control Plane.",
            "egress": [],
            "id": "sg-0cbe9bc56ed543566",
            "ingress": [],
            "name": "eks-apne2-fastcampus-control-plane",
            "name_prefix": "",
            "owner_id": "755233231675",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-apne2-fastcampus-control-plane",
              "kubernetes.io/cluster/apne2-fastcampus": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "apne2-fastcampus",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "tags_all": {
              "Name": "eks-apne2-fastcampus-control-plane",
              "kubernetes.io/cluster/apne2-fastcampus": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "apne2-fastcampus",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-051effa40fb6d871d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__control_plane",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ephemeral/nodes",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to ephemrally communicate with nodes.",
            "from_port": 1025,
            "id": "sgrule-1018430726",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbe9bc56ed543566",
            "self": false,
            "source_security_group_id": "sg-0c14850aad67b7885",
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "ephemeral/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to ephemrally communicate with pods.",
            "from_port": 1025,
            "id": "sgrule-443632514",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbe9bc56ed543566",
            "self": false,
            "source_security_group_id": "sg-00c6d5b25a476be67",
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__control_plane",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cluster-api/cidrs",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.222.0.0/16"
            ],
            "description": "Allow CIDRs to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-117892334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbe9bc56ed543566",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "cluster-api/nodes",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-237216485",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbe9bc56ed543566",
            "self": false,
            "source_security_group_id": "sg-0c14850aad67b7885",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "cluster-api/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-686222433",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbe9bc56ed543566",
            "self": false,
            "source_security_group_id": "sg-00c6d5b25a476be67",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:security-group/sg-0c14850aad67b7885",
            "description": "Security Group for all nodes in the EKS cluster.",
            "egress": [],
            "id": "sg-0c14850aad67b7885",
            "ingress": [],
            "name": "eks-apne2-fastcampus-node",
            "name_prefix": "",
            "owner_id": "755233231675",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-apne2-fastcampus-node",
              "kubernetes.io/cluster/apne2-fastcampus": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "apne2-fastcampus",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "tags_all": {
              "Name": "eks-apne2-fastcampus-node",
              "kubernetes.io/cluster/apne2-fastcampus": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "apne2-fastcampus",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-051effa40fb6d871d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-4022777560",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c14850aad67b7885",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this"
          ]
        },
        {
          "index_key": "all/cluster",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes egress access to the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-4200553694",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c14850aad67b7885",
            "self": false,
            "source_security_group_id": "sg-0d7aafe9d9dde703e",
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/cluster",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate from the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-208627265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c14850aad67b7885",
            "self": false,
            "source_security_group_id": "sg-0d7aafe9d9dde703e",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "all/self",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate each others.",
            "from_port": 0,
            "id": "sgrule-2180815685",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c14850aad67b7885",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "ephemeral/control-plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-4059721912",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c14850aad67b7885",
            "self": false,
            "source_security_group_id": "sg-0cbe9bc56ed543566",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "kubelet/control-plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to receive communication from the cluster control plane for kubelet.",
            "from_port": 10250,
            "id": "sgrule-129497822",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c14850aad67b7885",
            "self": false,
            "source_security_group_id": "sg-0cbe9bc56ed543566",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "kubelet/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to receive communication from the pods for kubelet.",
            "from_port": 10250,
            "id": "sgrule-1335202959",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c14850aad67b7885",
            "self": false,
            "source_security_group_id": "sg-00c6d5b25a476be67",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "node-exporter/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to receive communication from the pods for node-exporter.",
            "from_port": 9100,
            "id": "sgrule-3230357039",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c14850aad67b7885",
            "self": false,
            "source_security_group_id": "sg-00c6d5b25a476be67",
            "to_port": 9100,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__pod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:755233231675:security-group/sg-00c6d5b25a476be67",
            "description": "Security Group for all pods in the EKS cluster.",
            "egress": [],
            "id": "sg-00c6d5b25a476be67",
            "ingress": [],
            "name": "eks-apne2-fastcampus-pod",
            "name_prefix": "",
            "owner_id": "755233231675",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-apne2-fastcampus-pod",
              "kubernetes.io/cluster/apne2-fastcampus": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "apne2-fastcampus",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "tags_all": {
              "Name": "eks-apne2-fastcampus-pod",
              "kubernetes.io/cluster/apne2-fastcampus": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "apne2-fastcampus",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-051effa40fb6d871d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__pod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow pods to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-1758810506",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00c6d5b25a476be67",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__pod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/cluster",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate from the cluster security group(for fargate pods).",
            "from_port": 0,
            "id": "sgrule-1786363566",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00c6d5b25a476be67",
            "self": false,
            "source_security_group_id": "sg-0d7aafe9d9dde703e",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "all/nodes",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate from the nodes.",
            "from_port": 0,
            "id": "sgrule-3890889642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00c6d5b25a476be67",
            "self": false,
            "source_security_group_id": "sg-0c14850aad67b7885",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "all/self",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate each others.",
            "from_port": 0,
            "id": "sgrule-3241086254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00c6d5b25a476be67",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "ephemeral/control-plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2075061342",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00c6d5b25a476be67",
            "self": false,
            "source_security_group_id": "sg-0cbe9bc56ed543566",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "metrics-server/control-plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to receive metrics-server communication from the cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3961149983",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00c6d5b25a476be67",
            "self": false,
            "source_security_group_id": "sg-0cbe9bc56ed543566",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.aws_cloudwatch_log_group.this",
            "module.cluster.aws_eks_cluster.this",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.role__control_plane.aws_iam_instance_profile.this",
            "module.cluster.module.role__control_plane.aws_iam_role.this",
            "module.cluster.module.role__control_plane.aws_iam_role_policy.inline",
            "module.cluster.module.role__control_plane.aws_iam_role_policy_attachment.managed",
            "module.cluster.module.role__control_plane.aws_resourcegroups_group.this",
            "module.cluster.module.role__control_plane.data.aws_caller_identity.this",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.assume_role",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_iam_entities",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_oidc_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_saml_providers",
            "module.cluster.module.role__control_plane.data.aws_iam_policy_document.trusted_services",
            "module.cluster.module.role__control_plane.data.aws_partition.this",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}